--- a/src/Data/Neuroglia.Data/Properties/LocalizedResources.fr.resx
+++ b/src/Data/Neuroglia.Data/Properties/LocalizedResources.fr.resx
@@ -187,10 +187,10 @@
     <value>L'utilisateur possède pas le rôle '{role}'</value>
   </data>
   <data name="exception_domain_argumentcannotbeadateinthefuture" xml:space="preserve">
-    <value>L'argument '{argument}' ne peut pas être une date future</value>
+    <value>L'argument '{argument}' ne peut pas être une date dans le futur</value>
   </data>
   <data name="exception_domain_argumentcannotbeadateinthepast" xml:space="preserve">
-    <value>L'argument '{argument}' ne peut pas être une date passée</value>
+    <value>L'argument '{argument}' ne peut pas être une date dans le passé</value>
   </data>
   <data name="exception_domain_argumentisinvalidaddress" xml:space="preserve">
     <value>L'argument  '{argument}' spécifié '{value}' n'est pas une adresse valide</value>
@@ -225,7 +225,10 @@
   <data name="exception_domain_argumentmustbecomprisedbetweenincluding" xml:space="preserve">
     <value>L'argument '{argument}' doit être supérieur ou égal à {min} et inférieur ou égal à {max}</value>
   </data>
-  <data name="exception_domain_argumentmustbeearlierthan" xml:space="preserve">
+  <data name="exception_domain_argumentmustbeearlierdatetimethan" xml:space="preserve">
+    <value>L'argument {argument} doit être une date et heure égale à ou moins avancée que '{datetime}'</value>
+  </data>
+  <data name="exception_domain_argumentmustbeearliertimethan" xml:space="preserve">
     <value>L'argument {argument} doit être une heure égale à ou moins avancée que '{time}'</value>
   </data>
   <data name="exception_domain_argumentmustbehigherorequalto" xml:space="preserve">
@@ -237,7 +240,10 @@
   <data name="exception_domain_argumentmustbehigherthan" xml:space="preserve">
     <value>L'argument '{argument}' doit être supérieur à {min}</value>
   </data>
-  <data name="exception_domain_argumentmustbelaterthan" xml:space="preserve">
+  <data name="exception_domain_argumentmustbelaterdatetimethan" xml:space="preserve">
+    <value>L'argument {argument} doit être une date et heure égale à ou plus avancée que '{datetime}'</value>
+  </data>
+  <data name="exception_domain_argumentmustbelatertimethan" xml:space="preserve">
     <value>L'argument {argument} doit être une heure égale à ou plus avancée que '{time}'</value>
   </data>
   <data name="exception_domain_argumentmustbelowerorequalto" xml:space="preserve">
