--- a/src/Data/Neuroglia.Data/Properties/LocalizedResources.nl.resx
+++ b/src/Data/Neuroglia.Data/Properties/LocalizedResources.nl.resx
@@ -225,7 +225,10 @@
   <data name="exception_domain_argumentmustbecomprisedbetweenincluding" xml:space="preserve">
     <value>Het {argument} moet superieur of gelijk zijn aan {min} en inferieur of gelijk aan {max}</value>
   </data>
-  <data name="exception_domain_argumentmustbeearlierthan" xml:space="preserve">
+  <data name="exception_domain_argumentmustbeearlierdatetimethan" xml:space="preserve">
+    <value>Het argument {argument} moet een datum en tijd zijn die gelijk is aan of eerder is dan '{datetime}'</value>
+  </data>
+  <data name="exception_domain_argumentmustbeearliertimethan" xml:space="preserve">
     <value>Het argument {argument} moet een tijd zijn die gelijk is aan of eerder is dan '{time}'</value>
   </data>
   <data name="exception_domain_argumentmustbehigherorequalto" xml:space="preserve">
@@ -237,7 +240,10 @@
   <data name="exception_domain_argumentmustbehigherthan" xml:space="preserve">
     <value>Het {argument} moet hoger zijn dan {min}</value>
   </data>
-  <data name="exception_domain_argumentmustbelaterthan" xml:space="preserve">
+  <data name="exception_domain_argumentmustbelaterdatetimethan" xml:space="preserve">
+    <value>Het {argument} moet een datum en tijd zijn die gelijk is aan of later is dan '{datetime}'</value>
+  </data>
+  <data name="exception_domain_argumentmustbelatertimethan" xml:space="preserve">
     <value>Het {argument} moet een tijd zijn die gelijk is aan of later is dan '{time}'</value>
   </data>
   <data name="exception_domain_argumentmustbelowerorequalto" xml:space="preserve">
