fix(ResourceOriented): Fixed the RedisDatabase to throw when attempting to create a resource with the name/namespace of an existing one

--- a/src/Neuroglia.Data.Infrastructure.ResourceOriented.Abstractions/Properties/ProblemDescriptions.resx
+++ b/src/Neuroglia.Data.Infrastructure.ResourceOriented.Abstractions/Properties/ProblemDescriptions.resx
@@ -135,6 +135,9 @@
   <data name="ResourceAdmissionFailed" xml:space="preserve">
     <value>Failed to admit operation '{operation}' the specified resource '{resource}':\n{errors}</value>
   </data>
+  <data name="ResourceAlreadyExists" xml:space="preserve">
+    <value>The specified resource '{resource}' already exists</value>
+  </data>
   <data name="ResourceConversionFailed" xml:space="preserve">
     <value>Failed to convert resource '{resource}' to version '{version}':\n{errors}</value>
   </data>
