--- a/src/Neuroglia.Data.Infrastructure.ResourceOriented.Abstractions/Properties/ProblemDescriptions.resx
+++ b/src/Neuroglia.Data.Infrastructure.ResourceOriented.Abstractions/Properties/ProblemDescriptions.resx
@@ -133,7 +133,7 @@
     <value>Namespaced resource must reference a valid namespace</value>
   </data>
   <data name="ResourceAdmissionFailed" xml:space="preserve">
-    <value>Failed to admit operation '{operation}' the specified resource '{resource}':\n{errors}</value>
+    <value>Failed to admit operation '{operation}' on the specified resource '{resource}':\r\n{errors}</value>
   </data>
   <data name="ResourceAlreadyExists" xml:space="preserve">
     <value>The specified resource '{resource}' already exists</value>
